# scpipy

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: client.rst  server.rst  shared.rst
docs/source/guide/: custom_exception_handler.rst  lifespan.rst  route_handler.rst
docs/source/introduction/: installation.rst  license.rst  quickstart.rst
examples/client/: simple_client.py
examples/parser/: parse_command.py
examples/server/: classes_routers.py  custom_errors.py  server_lifespan.py  simple_server.py
src/scpipy/client/: __init__.py  client.py  exceptions.py  models.py  worker.py
src/scpipy/server/: __init__.py  builtin_router.py  context.py  dispatcher.py  exception_handler.py  exceptions.py  lifespan_manager.py  route_handler.py  routing.py  server.py
src/scpipy/shared/: __init__.py  ast.py  errors.py  exceptions.py  parser.py  utils.py
tests/server/route_handler/: __init__.py  conftest.py  test_defaults.py  test_init.py  test_invoke.py  test_validate_call.py
tests/shared/errors/: conftest.py  test_error_queue_clear.py  test_error_queue_negative.py  test_error_queue_overflow.py  test_error_queue_positive.py
tests/shared/parser/: conftest.py  test_block.py  test_command_arg.py  test_node_arg.py  test_optional_nodes.py
