[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[project]
name = 'scpipy'
description = 'Python SCPI I/O library with built-in client and server.'
version = '1.4.0'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ['pyvisa']

[project.urls]
homepage      = "https://github.com/0z0sk0/scpipy"
documentation = "https://scpipy.readthedocs.org/en/latest/"
repository    = "https://github.com/0z0sk0/scpipy"

[project.optional-dependencies]
test = ['pytest']

[tool.setuptools.package-dir]
'' = 'src'

[tool.setuptools.packages.find]
where = ['src']
